--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -1,12 +1,34 @@
-<nav class="h-screen w-64 bg-white px-6 py-10 flex flex-col shadow border-r-0 justify-between">
+<button class="lg:hidden fixed top-4 left-4 z-50 p-2 bg-white rounded-md shadow"
+    (click)="toggle()">
+    <lucide-icon name="menu"></lucide-icon>
+</button>
+
+<div *ngIf="isOpen" class="fixed inset-0 bg-black/40 z-40 lg:hidden" (click)="close()"></div>
+
+<nav class="fixed lg:static top-0 left-0 h-screen w-62 bg-white px-6 py-10 flex flex-col justify-between 
+    shadow transition-transform duration-300 z-50 lg:translate-x-0" [ngClass]="{
+    '-translate-x-full': !isOpen,
+    'translate-x-0': isOpen
+  }">
 
     <div>
-    <div class="flex items-center gap-3">
-        <img src="seta-para-cima.png" class="w-8 h-8" alt="seta-para-cima">
-        <span class="text-3xl font-bold text-gray-800">Foco +</span>
-    </div>
+        <div class="relative">
+            <div class="flex items-center gap-3">
+                <img src="seta-para-cima.png" class="w-8 h-8" alt="seta-para-cima">
+                <span class="text-3xl font-bold text-gray-800">Foco +</span>
+            </div>
 
-    <ul class="space-y-7 mt-13">
+            <button
+                class="lg:hidden absolute -top-2 right-0 p-2 rounded-md
+                    hover:bg-gray-100 transition cursor-pointer"
+                (click)="isOpen = false"
+                aria-label="Fechar menu"
+            >
+                <lucide-icon name="x" class="w-5 h-5"></lucide-icon>
+            </button>
+            </div>
+
+    <ul class="space-y-7 mt-12">
         <li>
             <a href="/" routerLinkActive="active"
             class="flex items-center gap-3 text-gray-700 hover:text-blue-600 transition">
