--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,11 +1,11 @@
 <div class="flex h-screen">
 
-  <app-navbar class="fixed left-0 top-0 h-screen w-64 z-20"></app-navbar>
+  <app-navbar></app-navbar>
 
   <div class="flex-1 flex flex-col">
-    <app-header class="fixed left-64 right-0 top-0 h-16 z-30"></app-header>
+    <app-header class="fixed top-0 right-0 left-0 lg:left-62 h-16 z-30"></app-header>
 
-    <main class="overflow-auto bg-gray-50 ml-64 mt-16 h-[calc(100vh-4rem)]">
+    <main class="overflow-auto bg-gray-50 mt-16 h-[calc(100vh-4rem)] px-4 sm:px-6 lg:px-0">
       <router-outlet></router-outlet>
     </main>
   </div>
