--- a/src/app/components/studies-filters/studies-filters.html
+++ b/src/app/components/studies-filters/studies-filters.html
@@ -10,7 +10,8 @@
         <input
           type="text"
           placeholder="Busca por matéria ou tópico..."
-          class="w-full pl-10 pr-4 py-2.5 border border-slate-200 rounded-lg text-sm
+          class="w-full pl-10 pr-4 py-3 sm:py-2.5
+                border border-slate-200 rounded-lg text-sm
                 focus:outline-none focus:ring-2 focus:ring-blue-500"
           (input)="onSearch($any($event.target).value)"
         />
@@ -18,7 +19,7 @@
     </div>
 
     <ng-container *ngIf="resultsCount === 0 && searchQuery">
-      <p class="text-slate-500 text-sm mt-2">
+      <p class="text-slate-500 text-sm mt-2 italic">
         {{ emptyMessage }}
       </p>
     </ng-container>
@@ -39,17 +40,18 @@
 
         <input
           type="text"
-          placeholder="Buscar metas..."
-          class="w-full pl-10 pr-4 py-2 border border-slate-200 rounded-lg 
-                 focus:outline-none focus:ring-2 focus:ring-blue-500"
-          (input)="onSearch($any($event.target).value)" 
+          placeholder="Busca por metas..."
+          class="w-full pl-10 pr-4 py-3 sm:py-2.5
+                border border-slate-200 rounded-lg text-sm
+                focus:outline-none focus:ring-2 focus:ring-blue-500"
+          (input)="onSearch($any($event.target).value)"
         />
       </div>
 
     </div>
 
     <ng-container *ngIf="resultsCount === 0 && searchQuery">
-      <p class="text-slate-500 text-sm mt-2">
+      <p class="text-slate-500 text-sm mt-2 italic">
         {{ emptyMessage }}
       </p>
     </ng-container>
