--- a/src/app/pages/estudos/estudos.html
+++ b/src/app/pages/estudos/estudos.html
@@ -1,4 +1,5 @@
-<div class="px-6 lg:px-10 py-8 w-full max-w-7xl mx-auto space-y-10">
+<div class="px-4 sm:px-6 lg:px-10 py-8 w-full max-w-7xl mx-auto space-y-10">
+
     <div class="flex justify-between items-center">
 
         <div>
@@ -12,26 +13,27 @@
 
     </div>
 
-    <div class="rounded-xl flex justify-evenly gap-4">
+        <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-4">
 
         <ng-container *ngFor="let s of studiesKips">
+            <div class="shadow p-3 rounded-md bg-white">
             <app-stats-card
-            [title]="s.title"
-            [value]="s.value"
-            [icon]="s.icon"
-            [color]="s.color">
+                [title]="s.title"
+                [value]="s.value"
+                [icon]="s.icon"
+                [color]="s.color">
             </app-stats-card>
+            </div>
         </ng-container>
 
-    </div>
+        </div>
+
 
     <div class="flex flex-col justify-center gap-3 mb-7">
+        <h2 class="text-sm text-slate-600">
+            Próximas sessões e atividades planejadas
+        </h2>
 
-        <div>
-            <h2 class="text-sm text-slate-600">
-                Próximas sessões e atividades planejadas
-            </h2>
-        </div>
         <app-studies-filters
             variant="studies"
             [resultsCount]="filteredStudies.length"
