feat(auth): definindo responsivo para a tela de login

--- a/src/app/components/auth-overlay/auth-overlay.html
+++ b/src/app/components/auth-overlay/auth-overlay.html
@@ -1,4 +1,4 @@
-<div class="h-full w-full flex items-center justify-center px-12 pointer-events-auto text-white">
+<div class="h-full w-full flex items-center justify-center px-6 text-white">
   <div class="text-center space-y-6 max-w-sm">
 
     <ng-container *ngIf="mode === 'login'; else registerText">
