--- a/src/app/components/login-form/login-form.html
+++ b/src/app/components/login-form/login-form.html
@@ -23,7 +23,7 @@
 
   <button
     class="w-full py-3 bg-blue-600 text-white rounded-lg
-           hover:bg-blue-700 transition"
+           hover:bg-blue-700 transition cursor-pointer"
   >
     Entrar
   </button>
