--- a/src/app/components/register-form/register-form.html
+++ b/src/app/components/register-form/register-form.html
@@ -4,15 +4,6 @@
   </h1>
 
   <input
-    type="text"
-    formControlName="name"
-    placeholder="Nome"
-    class="w-full px-4 py-3 rounded-lg border border-gray-300 text-sm
-           focus:outline-none focus:border-blue-500 focus:ring-2
-           focus:ring-blue-500/40"
-  />
-
-  <input
     type="email"
     formControlName="email"
     placeholder="Email"
@@ -34,6 +25,6 @@
     class="w-full py-3 bg-blue-600 text-white rounded-lg
            hover:bg-blue-700 transition cursor-pointer"
   >
-    Criar Conta
+    Confirmar Cadastro
   </button>
 </form>
