--- a/src/app/components/studies-table/studies-table.html
+++ b/src/app/components/studies-table/studies-table.html
@@ -23,7 +23,7 @@
                     }"
                     >
 
-                    <td class="block sm:table-cell px-6 py-3">
+                    <td class="relative sm:table-cell px-6 py-3">
                     <span class="sm:hidden text-xs text-slate-400 uppercase">
                         Matéria
                     </span>
@@ -74,40 +74,25 @@
                         </span>
                         </td>
 
-                    <td class="block sm:table-cell px-6 py-3 text-right">
-                    <div class="flex justify-end sm:block">
-                        <lucide-icon
-                        name="ellipsis-vertical"
-                        class="cursor-pointer"
-                        [ngClass]="{
-                            'text-gray-400': s.status === 'concluido',
-                            'text-gray-600': s.status !== 'concluido'
-                        }"
-                        (click)="toggleMenu(s.id)">
-                        </lucide-icon>
-                    </div>
+                    <td class="relative block sm:table-cell px-6 py-3 text-right overflow-visible">
+                        <div class="relative inline-block">
+                            <lucide-icon
+                            name="ellipsis-vertical"
+                            class="cursor-pointer"
+                            [ngClass]="{
+                                'text-gray-400': s.status === 'concluido',
+                                'text-gray-600': s.status !== 'concluido'
+                            }"
+                            (click)="toggleMenu(s.id)">
+                            </lucide-icon>
+                        </div>
 
-                        <div *ngIf="openMenuId === s.id"
-                        class="absolute right-6 mt-2 w-50 bg-white border border-slate-200 rounded-lg
-                        shadow-lg z-50">
+                            <div *ngIf="openMenuId === s.id"
+                            class="absolute right-0 bottom-full mb-3 w-50 bg-white border border-slate-200 rounded-lg
+                            shadow-lg z-50">
                             <ul class="py-1 text-sm text-center hover">
-                                <li *ngIf="s.status === 'em-andamento'"
-                                 class="px-4 py-2 cursor-pointer transition-colors hover:bg-slate-100">
-                                    Marcar como concluído
-                                </li>
-                                <li *ngIf="s.status === 'em-andamento'"
-                                 class="px-4 py-2 cursor-pointer transition-colors hover:bg-slate-100">
-                                    Marcar sessão
-                                </li>
-                                <li *ngIf="s.status === 'planejado'"
-                                 class="px-4 py-2 cursor-pointer transition-colors hover:bg-slate-100">
-                                    Iniciar sessão
-                                </li>
-                                <li *ngIf="s.status === 'concluido'"
-                                 class="px-4 py-2 cursor-pointer transition-colors hover:bg-slate-100">
-                                    Reabrir sessão
-                                </li>
-                                <li class="px-4 py-2 cursor-pointer transition-colors hover:bg-slate-100 text-red-600">
+                                <li  class="px-4 py-2 cursor-pointer transition-colors hover:bg-slate-100 text-red-600" 
+                                (click)="onDelete(s.id)">
                                     Excluir
                                 </li>
                             </ul>
