--- a/src/app/shared/study-session-modal/study-session-modal.html
+++ b/src/app/shared/study-session-modal/study-session-modal.html
@@ -47,12 +47,15 @@
         </div>
 
         <div class="flex justify-end gap-2 pt-4">
-            <button class="cursor-pointer px-4 py-2 text-sm rounded-md border bg-red-500 text-white hover:bg-red-400" (click)="onClose()">
+            <button 
+                class="cursor-pointer px-4 py-2 text-sm rounded-md border bg-red-500 text-white hover:bg-red-400" 
+                (click)="onClose()">
                 Cancelar
             </button>
 
-            <button class="cursor-pointer px-4 py-2 text-sm rounded-md bg-blue-600 text-white hover:bg-blue-700 disabled:opacity-50"
-            [disabled]="!selectedSubject || !selectedActivity" (click)="onConfirm()">
+            <button 
+                class="cursor-pointer px-4 py-2 text-sm rounded-md bg-blue-600 text-white hover:bg-blue-700 disabled:opacity-50"
+                [disabled]="!selectedSubject || !selectedActivity" (click)="onConfirm()">
                 Iniciar Sessão
             </button>
         </div>
