fix: renomeando pastas e arquivos do modal de remoção da sessão de estudos

--- a/src/app/pages/estudos/estudos.html
+++ b/src/app/pages/estudos/estudos.html
@@ -68,10 +68,10 @@
     (confirm)="onConfirmSession($event)">
 </app-study-session-modal>
 
-<app-confirm-modal
+<app-remove-session-modal
     *ngIf="isDeleteModalOpen"
     title="Excluir Sessão"
     message="Tem certeza que deseja excluir esta sessão de estudo?"
     (confirm)="onConfirmDelete()"
     (cancel)="onCancelDelete()">
-</app-confirm-modal>
+</app-remove-session-modal>
